# llm_metadata

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  docker-compose.yml  pyproject.toml  test_pipelines.py  test_raw_pdf_extraction.py
.claude/: settings.local.json
.devcontainer/: Dockerfile  README.md  claude-dev-reverse-proxy.conf  devcontainer.json  docker-compose.devcontainer.yml  entrypoint.sh  init-firewall.sh  init-workspace.sh  prompt-config-devcontainer.md
.github/: AGENTS.md  LAB_LOGGING.md
app/: Dockerfile  app_eval_viewer.py  docker-compose.viewer.yml  requirements.txt
configs/: eval_default.json  eval_fuzzy_species.json  eval_strict.json
data/: 20260327_172653_dev_subset_sections_notes.md  20260327_172654_dev_subset_abstract_notes.md  20260327_172656_dev_subset_pdf_file_notes.md  20260331_070721_wu32_34_abstract_notes.md  dataset_092624.xlsx  dataset_092624_validated.xlsx  dataset_article_mapping.csv  datasets.pickle  dev_subset.csv  quebec_papers_2024.csv  registry.sqlite  semantic_scholar_cited_articles.csv
docs/: EZPROXY_SETUP.md  PIPELINE_REFACTORING.md  article_outline.md  claim-grounding-research.md  evaluation.md  evaluation_audit_diagram.mmd  evaluation_audit_guide.md  ezproxy_guide.md  normalization_refactoring.md  pipeline_architecture.md  pipelines_guide.md  raw_pdf_classification.md  relevance_classification_comparison_draft.md  research-quality-retrospective.md  vpn_access_guide.md
llm_metadata/: gpt_classify.py  prefect_pipeline.py
notebooks/: README.md  article_fulltext_retrieval_exploration.ipynb  batch_abstract_evaluation.ipynb  batch_fulltext_evaluation.ipynb  batch_pdf_file_evaluation.ipynb  bq_species_count.ipynb  claim_grounding_pilot.ipynb  compared_df.csv  confidence_analysis.ipynb  confidence_analysis_end.ipynb  confidence_analysis_temp05.ipynb  data_semantic_scholar.ipynb  download_all_fuster_pdfs.ipynb  download_dryad_pdfs_fuster.ipynb  explore_xlsx_dataset.ipynb  field_strategies_eval_demo.ipynb  figure_data_gaps.ipynb  fulltext_extraction_evaluation.ipynb  fuster_annotations_validation.ipynb  fuster_dataset_text_classification.ipynb  fuster_features_explore.ipynb  fuster_test_extraction_evaluation.ipynb  main.ipynb  pdf_chunking_exploration.ipynb  prompt_eval_results.ipynb  relevance_llm_direct.ipynb  relevance_llm_direct_pdf.ipynb  relevance_mechanistic.ipynb  relevance_mechanistic_pdf.ipynb  single_doi_extraction_with_evidence.ipynb  species_recall_improvement.ipynb  taxonomic_relevance_evaluation.ipynb  zenodo_abstract_explore.ipynb
plans/: article-full-text-chunking.md  automated_relevance_classification.md  claim-grounding.md  data-papers-manifest-refactor.md  enrich_url_metadata.md  evidence-mode.md  external_sources_refactor.md  gadm_enrichment.md  gbif_species_matching.md  integrate_semantic_scholar.md  model_hierarchy_enrichment.md  nominatim_enrichment.md  plan-fullTextSchemaExtractionWithoutVectorDb.md  presentation_20260219_work_plan.md  prompt-engineering-flow.md  prompt-eval-and-viewer-improvements.md  prompt-eval-io-manifest-refactor  prompt-eval-io-manifest-refactor.md  prompt-eval-viewer-improvements.md  research-mcp-server.md  selfcontained-prompt-eval.md  semantic_scholar_integration.md  taxonomic-relevance-refactor.md  two-stage-evidence-extraction.md
scripts/: download_all_fuster_pdfs.py  start-jupyter.sh  test_ezproxy_cookies.py  test_scihub_live.py  test_vpn_access.py
src/: dryad.py  fuster_model.py  gpt_classify.py  prefect_pipeline.py  zenodo.py
tasks/: AGENT_EXECUTION_PLAN.md  README.md  VISUAL_OVERVIEW.md  article-full-text-chunking.md  integrate_semantic_scholar.md  semantic_scholar_implementation_guide.md
tests/: config.py  conftest.py  test_article_retrieval_ss.py  test_data_paper_manifest.py  test_data_paper_schema.py  test_datasource_schema.py  test_doi_utils.py  test_dryad_api.py  test_eval_viewer_notes.py  test_evaluation.py  test_evaluation_field_strategies.py  test_evaluation_fuzzy.py  test_gbif.py  test_gbif_enrichment.py  test_manifest_adapters.py  test_manifest_integration.py  test_multisource_integration.py  test_openalex.py  test_pdf_classify.py  (+11 more)
(+740 files in other folders)
