[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_metadata"
version = "0.1.0"
description = "A Python package to interact with Dryad and zenodo datasets and extract ecological metadata using GPT-4."
authors = [
    { name = "Vincent Beauregard", email = "vincent.beauregard@usherbrooke.ca" }
]
readme = "README.md"
dependencies = [
    "pydantic",
    "requests",
    "prefect",
    "openai",
    "pandera",
    "lxml",
    "qdrant-client",
    "tiktoken",
    "rich",
    "browser-cookie3",
    "beautifulsoup4",
    "retrying",
    "pysocks",
    "joblib",
    "pypdf",
    "loguru>=0.7.3",
    "rapidfuzz>=3.14.3",
]
requires-python = ">=3.11,<3.13"

[project.optional-dependencies]
dev = [
    "uv",
    "pandas",
    "python-dotenv",
    "ipykernel",
    "loguru",
    "openpyxl",
    "grobid-client-python",
    "rapidfuzz",
    "jupyter-collaboration==4.0.2",
    "jupyter-mcp-tools>=0.1.4",
    "jupyterlab==4.4.1",
    "jupyter-mcp-tools>=0.1.4",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["llm_metadata*"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.0",
    "pytest>=9.0.2",
]
