[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_metadata"
version = "0.1.0"
description = "A Python package to interact with Dryad and zenodo datasets and extract ecological metadata using GPT."
authors = [
    { name = "Vincent Beauregard", email = "vincent.beauregard@usherbrooke.ca" }
]
readme = "README.md"
dependencies = [
    "pydantic",
    "requests",
    "prefect",
    "openai",
    "pandera",
    "lxml",
    "qdrant-client",
    "tiktoken",
    "rich",
    "browser-cookie3",
    "beautifulsoup4",
    "retrying",
    "pysocks",
    "joblib",
    "pypdf",
    "loguru>=0.7.3",
    "rapidfuzz>=3.14.3",
    "streamlit-lexical>=1.3.2",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "scikit-learn>=1.8.0",
    "openpyxl>=3.1.5",
    "pymupdf>=1.27.2.2",
    "python-docx>=1.2.0",
]
requires-python = ">=3.11,<3.13"

[project.optional-dependencies]
dev = [
    "uv",
    "pandas",
    "python-dotenv",
    "ipykernel",
    "loguru",
    "openpyxl",
    "grobid-client-python",
    "rapidfuzz",
    "jupyter-collaboration==4.0.2",
    "jupyter-mcp-tools>=0.1.4",
    "jupyterlab==4.4.1",
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["llm_metadata*"]

[project.scripts]
app = "llm_metadata.app.app_eval_viewer:run"
prompt_eval = "llm_metadata.prompt_eval:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.0",
    "pandas>=1.5",
    "python-dotenv>=1.0",
    "pytest>=9.0.2",
]
